# fortinet-ui-terraform

./: .gitignore  CLAUDE.md  README.md  REBUILD_AUTOSCALE_GROUP.sh  mdw-hugo-instructions.md  package-lock.json  package.json
content/: _index.md
content/1_Introduction/: _index.md
content/2_Getting_Started/: 2_0_aws_credentials.md  2_1_existing_vpc_resources.md  2_2_autoscale_template.md  2_3_ha_pair.md  _index.md
content/2_Overview/: _index.md
content/3_Example_Templates/: _index.md
content/3_Licensing/: _index.md
content/3_Overview/: _index.md
content/4_Licensing/: _index.md
content/4_Solution_Components/: _index.md
content/5_Architecture/: _index.md
content/5_Templates/: _index.md
content/6_Templates/: _index.md
content/6_Web_UI/: 6_1_existing_vpc_resources.md  6_2_autoscale_template.md  6_3_ha_pair.md  _index.md
scripts/: repoConfig.json
slides/: presentation_slides.md
sso_login/: aws_login.sh
terraform/autoscale_template/: .gitignore  1-arm-fgt-conf.cfg  1-arm-wdm-eni-fgt-conf.cfg  1-arm-wdm-fgt-conf.cfg  nat_gw.tf  (+10 more)
testing_scripts/: autoscale-demo-script.md  monitor_asg.sh  monitor_gwlb_health.sh
ui/: .gitignore  ANNOTATION_REFERENCE.md  CHEATSHEET.md  GETTING_STARTED.md  GIT_BEST_PRACTICES.md  README.md  RESTART.sh  RESUME_SESSION.md  SESSION_STATE.md  SETUP.sh  START_HERE.md
ui/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
ui/backend/app/: config.py  main.py  schemas.py
ui/backend/app/api/: aws.py  root.py  terraform.py
ui/backend/app/parsers/: __init__.py  tfvars_parser.py
(+139 files in other folders)
